# nanovg-cpp-wrapper

./: .gitmodules  CMakeLists.txt
include/: ci_nanovg.hpp  ci_nanovg_gl.hpp  color.h  draw.h  shape.h
src/: ci_nanovg.cpp  ci_nanovg_gl.cpp  draw.cpp  main.cpp  shape.cpp
